# django-loose-fk

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
django_loose_fk/: __init__.py  apps.py  checks.py  constraints.py  drf.py  fields.py  filters.py  handlers.py  loaders.py  lookups.py  query_list.py  utils.py  validators.py  virtual_models.py
django_loose_fk/inspectors/: fields.py  query.py
django_loose_fk/oas_extensions/: __init__.py  fields.py  query.py
docs/: index.rst  quickstart.rst
testapp/: api.py  apps.py  handlers.py  loaders.py  models.py  settings.py  urls.py
testapp/migrations/: 0001_initial.py  0002_auto_20190808_0805.py  0002_auto_20220310_1612.py  0003_auto_20190808_1647.py  0003_auto_20230705_0917.py  0004_auto_20191127_0536.py  0004_zaakobjectfk.py  0005_auto_20200702_0538.py
tests/: conftest.py  test_api.py  test_api_docs.py  test_chain_loose_fk.py  test_compare.py  test_filter.py  test_handlers.py  test_integrity.py  test_is_local.py  test_loaders.py  test_model_field_interface.py  test_model_layer.py  test_querying.py  test_querylist.py  test_serializer_field.py  test_system_checks.py
