# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-loose-fk
version = 0.5.2
description = TODO
long_description = file: README.rst
url = https://github.com/maykinmedia/django-loose-fk
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = TODO
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=2.2
    djangorestframework
    django-filter
tests_require =
    psycopg2
    pytest
    pytest-django
    tox
    isort
    requests
    requests-mock

[options.extras_require]
openapi =
    drf-yasg
tests =
    psycopg2
    pytest
    pytest-django
    tox
    isort
    requests
    requests-mock
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion

# 3rd party configuration

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=django_loose_fk
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes
