# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-loose-fk
version = 1.0.4
description = Django Loose FK handles local or remote "ForeignKey" references.
long_description = file: README.rst
url = https://github.com/maykinmedia/django-loose-fk
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = ForeignKey, URL reference, decentralization, integrity
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=3.2
    djangorestframework>=3.11.0
    django-filter
    coreapi
tests_require =
    psycopg2
    pytest
    pytest-django
    tox
    black
    isort
    requests
    requests-mock

[options.extras_require]
openapi =
    drf-yasg
tests =
    psycopg2
    pytest
    pytest-django
    tox
    black
    isort
    requests
    requests-mock
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=django_loose_fk
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
junit_family=legacy
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
